--- a/examples/index.html
+++ b/examples/index.html
@@ -45,7 +45,7 @@ li:hover {
 	background-color: #ccc;
 }
 </style>
-<h2>NVD3 Examples List</h2>
+<h2>D3 Examples List</h2>
 <ul>
 <li><a href="bullet.html">Bullet</a>
 <li><a href="bulletChart.html">BulletChart</a>
