--- a/examples/index.html
+++ b/examples/index.html
@@ -1,53 +1,142 @@
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2 Final//EN"><html>
+<head>
 <title>NVD3 Examples List</title>
-<body>
+<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 <style>
+
+/*
+ * Base structure
+ */
+
+/* Move down content because we have a fixed navbar that is 50px tall */
 body {
-	font-family: Helvetica;
-	/* IE10 Consumer Preview */ 
-	background-image: -ms-radial-gradient(left top, circle farthest-corner, #FFFFFF 0%, #DEE2FF 100%);
-
-	/* Mozilla Firefox */ 
-	background-image: -moz-radial-gradient(left top, circle farthest-corner, #FFFFFF 0%, #DEE2FF 100%);
-
-	/* Opera */ 
-	background-image: -o-radial-gradient(left top, circle farthest-corner, #FFFFFF 0%, #DEE2FF 100%);
-
-	/* Webkit (Safari/Chrome 10) */ 
-	background-image: -webkit-gradient(radial, left top, 0, left top, 1012, color-stop(0, #FFFFFF), color-stop(1, #DEE2FF));
-
-	/* Webkit (Chrome 11+) */ 
-	background-image: -webkit-radial-gradient(left top, circle farthest-corner, #FFFFFF 0%, #DEE2FF 100%);
-
-	/* W3C Markup, IE10 Release Preview */ 
-	background-image: radial-gradient(circle farthest-corner at left top, #FFFFFF 0%, #DEE2FF 100%);
+  padding-top: 50px;
 }
 
-ul {
-	list-style: none;
-	float: left;
-	margin-right: 20px;
-	border-right: solid 1px #ccc;
+
+/*
+ * Global add-ons
+ */
+
+.sub-header {
+  padding-bottom: 10px;
+  border-bottom: 1px solid #eee;
 }
 
-li {
-	padding: 8px;
-	min-width: 220px;
+
+/*
+ * Sidebar
+ */
+
+/* Hide for mobile, show later */
+.sidebar {
+  display: none;
+}
+@media (min-width: 768px) {
+  .sidebar {
+    position: fixed;
+    top: 51px;
+    bottom: 0;
+    left: 0;
+    z-index: 1000;
+    display: block;
+    padding: 20px;
+    overflow-x: hidden;
+    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+    background-color: #f5f5f5;
+    border-right: 1px solid #eee;
+  }
 }
 
-a {
-	text-decoration: none;
-	display:block;
+/* Sidebar navigation */
+.nav-sidebar {
+  margin-right: -21px; /* 20px padding + 1px border */
+  margin-bottom: 20px;
+  margin-left: -20px;
+}
+.nav-sidebar > li > a {
+  padding-right: 20px;
+  padding-left: 20px;
+}
+.nav-sidebar > .active > a {
+  color: #fff;
+  background-color: #428bca;
 }
 
-li:hover {
-	background-color: #ccc;
+
+/*
+ * Main content
+ */
+
+.main {
+  padding: 20px;
 }
+@media (min-width: 768px) {
+  .main {
+    padding-right: 40px;
+    padding-left: 40px;
+  }
+}
+.main .page-header {
+  margin-top: 0;
+}
+
+
+/*
+ * Placeholder dashboard ideas
+ */
+
+.placeholders {
+  margin-bottom: 30px;
+  text-align: center;
+}
+.placeholders h4 {
+  margin-bottom: 0;
+}
+.placeholder {
+  margin-bottom: 20px;
+}
+.placeholder img {
+  display: inline-block;
+  border-radius: 50%;
+}
+
+
+ 
 </style>
+
+
+</head>
+<body>
+<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">D3 Examples</a>
+        </div>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </div>
+
+<div class="container-fluid">
+      <div class="row">
+        <div class="col-sm-3 col-md-2 sidebar">
+	
 <h2>D3 Examples List</h2>
-<ul>
-<li><a href="bullet.html">Bullet</a>
+<ul class="nav nav-sidebar">
+<li><a class="aa" href="pie.html" >Bullet</a>
 <li><a href="bulletChart.html">BulletChart</a>
 <li><a href="crossfilter.html">Crossfilter</a>
 <li><a href="crossfilterWithDimentions.html">CrossfilterWithDimentions</a>
@@ -67,7 +156,7 @@ li:hover {
 <li><a href="lineWithFisheyeChart.html">LineWithFisheyeChart</a>
 <li><a href="lineWithFocusChart.html">LineWithFocusChart</a>
 </ul>
-<ul>
+<ul class="nav nav-sidebar">
 <li><a href="multiBar.html">MultiBar</a>
 <li><a href="multiBarChart.html">MultiBarChart</a>
 <li><a href="multiBarHorizontalChart.html">MultiBarHorizontalChart</a>
@@ -84,7 +173,7 @@ li:hover {
 <li><a href="stackedAreaChart.html">StackedAreaChart</a>
 </ul>
 
-<ul>
+<ul class="nav nav-sidebar">
 	<strong>Test pages</strong>
 	<li><a href="../test/lineChartTest.html">Line Chart</a></li>
 	<li><a href="../test/pieChartTest.html">Pie Chart</a></li>
@@ -94,5 +183,17 @@ li:hover {
 	<li><a href="../test/polylinearTest.html">Polylinear Scale Line Chart</a></li>
 	<li><a href="../test/realTimeChartTest.html">Real Time Chart</a></li>
 </ul>
+</div>
+<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main" id="displaycharts">
+<iframe src="http://en.wikipedia.net" width="100%" height="100%" name="search_iframe"></iframe></div>
+</div>
+	     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+		 <script>
+$(function() {
+ $('a').each(function(){
+     $(this).attr("target","search_iframe");
+});
+});
+</script>
 </body>
 </html>
