--- a/examples/index.html
+++ b/examples/index.html
@@ -185,7 +185,7 @@ body {
 </ul>
 </div>
 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main" id="displaycharts">
-<iframe src="http://en.wikipedia.net" width="100%" height="100%" name="search_iframe"></iframe></div>
+<iframe src="pie.html" width="100%" height="100%" name="search_iframe"></iframe></div>
 </div>
 	     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 		 <script>
